OpenHome/Net/Bindings/C/Device/DvProvider.h

/* @} */
/**
 * @addtogroup DvProvider
 * @ingroup Device
 * @{
 */

/**
 * Opaque handle to a provider
 */
typedef THandle DvProviderC;
    
/**
 * Callback which runs when an action is invoked
 */
typedef void (STDCALL *OhNetCallbackDvInvocation)(void* aPtr, DvInvocationC aInvocation);
/**
 * Create a provider (of a service)
 *
 * @param[in] aDevice   Device the service is being offered by
 * @param[in] aDomain   Vendor domain of the service being provided
 * @param[in] aType     Name of the service being provided
 * @param[in] aVersion  Version of the service being provided
 */
DllExport DvProviderC STDCALL DvProviderCreate(DvDeviceC aDevice, const char* aDomain, const char* aType, uint32_t aVersion);
/**
 * Destroy a provider
 *
 * @param[in] aProvider   Handle to a provider
 */
DllExport void STDCALL DvProviderDestroy(DvProviderC aProvider);
/**
 * Add an action to the provider
 *
 * @param[in] aProvider  Handle to a provider
 * @param[in] aAction    Returned by ServiceActionCreate.  Ownership passes to aProvider
 * @param[in] aCallback  Callback to run when the action is invoked
 * @param[in] aPtr       Pointer to pass to the above callback
 */
DllExport void STDCALL DvProviderAddAction(DvProviderC aProvider, ServiceAction aAction, OhNetCallbackDvInvocation aCallback, void* aPtr);
/**
 * Lock the provider's properties, blocking publication of updates.
 *
 * This is not necessary when updating a single property but is used by providers that have
 * >1 properties whose values are related.  Without locking, updates to some properties may
 * be published, leaving related properties in their old (now incompatible) states.
 *
 * Every call to this must be followed by (exactly) one call to DvProviderPropertiesUnlock().
 *
 * @param[in] aProvider   Handle to a provider
 */
DllExport void STDCALL DvProviderPropertiesLock(DvProviderC aProvider);
/**
 * Unlock the provider's properties, allowing publication of updates.
 *
 * Any pending updates will automatically be scheduled.
 * This must only be called following a call to DvProviderPropertiesLock().
 *
 * @param[in] aProvider   Handle to a provider
 */
DllExport void STDCALL DvProviderPropertiesUnlock(DvProviderC aProvider);
/**
 * Add a property (passing ownership) to a provider
 *
 * @param[in] aProvider   Handle to a provider
 * @param[in] aProperty   Returned by ServicePropertyCreate[type]Dv.  Ownership passes to aProvider.
 */
DllExport void STDCALL DvProviderAddProperty(DvProviderC aProvider, ServiceProperty aProperty);
/**
 * Utility function which updates the value of a PropertyInt.
 *
 * If the property value has changed and the properties are not locked (DvProviderPropertiesLock()
 * called more recently than DvProviderPropertiesUnlock()), publication of an update is scheduled.
 *
 * Throws ParameterValidationError if the property has a range of allowed values and
 * the new value is not in this range
 *
 * @param[in]  aProvider   Handle to a provider
 * @param[in]  aProperty   Returned by ServicePropertyCreateIntDv
 * @param[in]  aValue      New value for the property
 * @param[out] aChanged    1 if the property's value has changed (aValue was different to
 *                         the previous value); 0 otherwise
 *
 * @return  0 if the set succeeded; none-zero otherwise
 */
DllExport int32_t STDCALL DvProviderSetPropertyInt(DvProviderC aProvider, ServiceProperty aProperty, int32_t aValue, uint32_t* aChanged);
/**
 * Utility function which updates the value of a PropertyUint. (Not intended for external use)
 *
 * If the property value has changed and the properties are not locked (DvProviderPropertiesLock()
 * called more recently than DvProviderPropertiesUnlock()), publication of an update is scheduled.
 *
 * Throws ParameterValidationError if the property has a range of allowed values and
 * the new value is not in this range
 *
 * @param[in]  aProvider   Handle to a provider
 * @param[in]  aProperty   Returned by ServicePropertyCreateUintDv
 * @param[in]  aValue      New value for the property
 * @param[out] aChanged    1 if the property's value has changed (aValue was different to
 *                         the previous value); 0 otherwise
 *
 * @return  0 if the set succeeded; none-zero otherwise
 */
DllExport int32_t STDCALL DvProviderSetPropertyUint(DvProviderC aProvider, ServiceProperty aProperty, uint32_t aValue, uint32_t* aChanged);
/**
 * Utility function which updates the value of a PropertyBool. (Not intended for external use)
 *
 * If the property value has changed and the properties are not locked (DvProviderPropertiesLock()
 * called more recently than DvProviderPropertiesUnlock()), publication of an update is scheduled.
 *
 * Throws ParameterValidationError if the property has a range of allowed values and
 * the new value is not in this range
 *
 * @param[in]  aProvider   Handle to a provider
 * @param[in]  aProperty   Returned by ServicePropertyCreateBoolDv
 * @param[in]  aValue      New value for the property
 * @param[out] aChanged    1 if the property's value has changed (aValue was different to
 *                         the previous value); 0 otherwise
 *
 * @return  0 if the set succeeded; none-zero otherwise
 */
DllExport int32_t STDCALL DvProviderSetPropertyBool(DvProviderC aProvider, ServiceProperty aProperty, uint32_t aValue, uint32_t* aChanged);
/**
 * Utility function which updates the value of a PropertyString. (Not intended for external use)
 *
 * If the property value has changed and the properties are not locked (DvProviderPropertiesLock()
 * called more recently than DvProviderPropertiesUnlock()), publication of an update is scheduled.
 *
 * Throws ParameterValidationError if the property has a range of allowed values and
 * the new value is not in this range
 *
 * @param[in]  aProvider   Handle to a provider
 * @param[in]  aProperty   Returned by ServicePropertyCreateStringDv
 * @param[in]  aValue      New value for the property
 * @param[out] aChanged    1 if the property's value has changed (aValue was different to
 *                         the previous value); 0 otherwise
 *
 * @return  0 if the set succeeded; none-zero otherwise
 */
DllExport int32_t STDCALL DvProviderSetPropertyString(DvProviderC aProvider, ServiceProperty aProperty, const char* aValue, uint32_t* aChanged);
/**
 * Utility function which updates the value of a PropertyBinary. (Not intended for external use)
 *
 * If the property value has changed and the properties are not locked (DvProviderPropertiesLock()
 * called more recently than DvProviderPropertiesUnlock()), publication of an update is scheduled.
 *
 * Throws ParameterValidationError if the property has a range of allowed values and
 * the new value is not in this range
 *
 * @param[in]  aProvider   Handle to a provider
 * @param[in]  aProperty   Returned by ServicePropertyCreateBinaryDv
 * @param[in]  aData       New data for the property
 * @param[in]  aLen        Length of the new data
 * @param[out] aChanged    1 if the property's value has changed (aValue was different to
 *                         the previous value); 0 otherwise
 *
 * @return  0 if the set succeeded; none-zero otherwise
 */
DllExport int32_t STDCALL DvProviderSetPropertyBinary(DvProviderC aProvider, ServiceProperty aProperty, const uint8_t* aData, uint32_t aLen, uint32_t* aChanged);